--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "convex": "^1.16.2",
     "convex-helpers": "^0.1.58",
     "date-fns": "^4.1.0",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.441.0",
     "nanoid": "^5.0.7",
     "next": "14.2.12",
